--- a/View/AnnualGrowthStock.html
+++ b/View/AnnualGrowthStock.html
@@ -111,13 +111,67 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let startInput = document.getElementById("startInput").value;
             let addInput = document.getElementById("addInput").value;
             let rateInput = document.getElementById("rateInput").value;
             let yearsInput = document.getElementById("yearsInput").value;
             document.getElementById('answer').innerHTML = exports.AnnGroSt(startInput, addInput, rateInput, yearsInput, option);
             document.getElementById('answer').style.color = "#ffffff";
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["6", exports.AnnGroSt(startInput, addInput, rateInput, yearsInput, option)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                            console.log('POST request successful');
+                            
+                            } 
+                            else {
+                            console.error('POST request failed');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
         }
     </script>
     </body>
