--- a/View/BondPrice.html
+++ b/View/BondPrice.html
@@ -110,13 +110,69 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let ym = document.getElementById("ymInput").value;
             let mr = document.getElementById("mrInput").value;
             let bfv = document.getElementById("bfvInput").value;
             let acr = document.getElementById("acrInput").value;
             document.getElementById('answer').innerHTML = exports.BP(ym, mr, bfv, acr, option);
             document.getElementById('answer').style.color = "#ffffff";
+
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["10",  exports.BP(ym, mr, bfv, acr, option)  ]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                            console.log('POST request successful');
+                            
+                            } 
+                            else {
+                            console.error('POST request failed');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
+
         }
     </script>
     </body>
