--- a/View/ExpectedDividends.html
+++ b/View/ExpectedDividends.html
@@ -121,7 +121,7 @@
             displayMenu();
             displayGrowth(input)
         }
-        function calculate(){
+        async function calculate(){
             let args = [document.getElementById("rcntdivInput").value];
             for(let i = 1; i <= option; i++){
                 args.push(document.getElementById("growth" + i + "Input").value);
@@ -129,6 +129,62 @@
             console.log(args);
             document.getElementById('answer').innerHTML = exports.expectedDividends(args);
             document.getElementById('answer').style.color = "#ffffff";
+
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["7", exports.expectedDividends(args)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                            console.log('POST request successful');
+                            
+                            } 
+                            else {
+                            console.error('POST request failed');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
+
         }
     </script>
     </body>
