--- a/View/PresentStockPrice.html
+++ b/View/PresentStockPrice.html
@@ -83,12 +83,68 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let CurInput = document.getElementById("CurInput").value;
             let rateInput = document.getElementById("rateInput").value;
             let stockInput = document.getElementById("stockInput").value;
             document.getElementById('answer').innerHTML = exports.PSP(CurInput, rateInput, stockInput);
             document.getElementById('answer').style.color = "#ffffff";
+            
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["8", exports.PSP(CurInput, rateInput, stockInput)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                            console.log('POST request successful');
+                            
+                            } 
+                            else {
+                            console.error('POST request failed');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
+            
         }
     </script>
     </body>
