--- a/View/login.html
+++ b/View/login.html
@@ -31,7 +31,7 @@
             <input type="email" id="emailUser" name="emailUser" required><br>
             </h1>
             <h1>
-            <label for="password">Password:</label>
+            <label style="color: #a349a4;" for="password">Password:</label>
             <input type="password" id="password" name="password" required><br>
             </h1>
             <button type="submit" style="background-color: #a349a4;color: rgb(255, 255, 255); height: 50px; width: 100px; " > Login </button>
