--- a/View/AnnualGrowthDividends.html
+++ b/View/AnnualGrowthDividends.html
@@ -82,12 +82,60 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let stockPrice = document.getElementById("stckprcInput").value;
             let recentDiv = document.getElementById("rcntdivInput").value;
             let reqRateReturn = document.getElementById("reqratertrnInput").value;
             document.getElementById('answer').innerHTML = exports.AnnGroDiv(stockPrice, recentDiv, reqRateReturn);
             document.getElementById('answer').style.color = "#ffffff";
+
+             let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["5",exports.AnnGroDiv(stockPrice, recentDiv, reqRateReturn)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
+
         }
     </script>
     </body>
