--- a/View/CAPM.html
+++ b/View/CAPM.html
@@ -94,6 +94,52 @@
             document.getElementById('answer').innerHTML = exports.CAPM(expInput, rateInput, stockInput);
             document.getElementById('answer').style.color = "#ffffff";
         }
+         let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["15",exports.CAPM(expInput, rateInput, stockInput)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
     </script>
     </body>
 </html>
