--- a/View/FutureStockPrice.html
+++ b/View/FutureStockPrice.html
@@ -120,14 +120,69 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let numPInput = document.getElementById("numPInput").value;
             let pvInput = document.getElementById("pvInput").value;
             let rateInput = document.getElementById("rateLabel").value;
             let pmtInput = document.getElementById("pmtInput").value;
             document.getElementById('answer').innerHTML = exports.FSP(numPInput, pvInput, rateInput, pmtInput,option);
             document.getElementById('answer').style.color = "#ffffff";
+
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["9", exports.FSP(numPInput, pvInput, rateInput, pmtInput,option)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                            console.log('POST request successful');
+                            
+                            } 
+                            else {
+                            console.error('POST request failed');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
         }
+    }
     </script>
     </body>
 </html>
