--- a/View/NPV.html
+++ b/View/NPV.html
@@ -89,13 +89,61 @@
         </div>
         <div id = "extraValue${values}"></div>`;
         }
-        function calculate(){
+        async function calculate(){
             let args = [document.getElementById("rateInput").value];
             for(let i = 1; i <= values; i++){
                 args.push(document.getElementById(`valueInput${i}`).value);
             }
             document.getElementById('answer').innerHTML = exports.NPV(args);
             document.getElementById('answer').style.color = "#ffffff";
+
+              let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["4",exports.NPV(args)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
+
         }
     </script>
     </body>
