--- a/View/PV.html
+++ b/View/PV.html
@@ -117,13 +117,62 @@
             }
 
         }
-        function calculate(){
+
+
+        async function calculate(){
             let rate = document.getElementById("rateInput").value;
             let nper = document.getElementById("nperInput").value;
             let pmt = document.getElementById("pmtInput").value;
             let fv = document.getElementById("fvInput").value;
             document.getElementById('answer').innerHTML = exports.PV(rate, nper, pmt, fv, option);
             document.getElementById('answer').style.color = "#ffffff";
+
+            let response = await fetch('http://localhost:4000/loggedUser');
+
+            let data = ["0",exports.PV(rate, nper, pmt, fv, option)]
+
+            try{
+                 users = await response.json();
+
+                 let user = {
+
+                    Email: users.Email,
+                    history: [data]
+
+                    }
+
+                if (response != null) {
+
+                        await fetch('/postHis', {
+                            method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json'
+                                    },
+                            body: JSON.stringify({user :{
+
+                                Email: users.Email,
+                                history: [data]
+
+                                }})
+                        })
+
+                        .catch(error => {
+                            console.error('Error sending POST request:', error);
+                        });
+                }
+                else{
+
+                    console.log("No account");
+
+                }
+
+           
+            }
+            catch{
+
+                console.log("Failed");
+
+            }
         }
     </script>
     </body>
