--- a/View/IRR.html
+++ b/View/IRR.html
@@ -25,52 +25,35 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "invesLabel" for="invesInput" style="font-size: 40px; float: left;">Intial invesment:</label>
-                <input type="number" step="0.01" class="form-control" id="invesInput" name="invesInput"></input>
+                <label id = "valuesLabel" for="valuesInput" style="font-size: 40px; float: left;">Values:</label>
+                <div class="dropdownForm" id="valuesInput" name="valuesInput">
+                    <button class="dropbtnForm" id="valueSelect" onclick="displayMenu()" type="button" style="margin-top: 5px;">1 ▽</button>
+                    <div class="dropdown-contentForm" id="menu" type="button" style = "border-style: solid; border-top-style: none; border-width: 5px; border-color: #a349a4;">
+                        <a href="javascript:void(0)" id="1" type="button" onclick="switchOption(1)" style="display:none;">1</a>
+                        <a href="javascript:void(0)" id="2" type="button" onclick="switchOption(2)">2</a>
+                        <a href="javascript:void(0)" id="3" type="button" onclick="switchOption(3)">3</a>
+                        <a href="javascript:void(0)" id="4" type="button" onclick="switchOption(4)">4</a>
+                        <a href="javascript:void(0)" id="5" type="button" onclick="switchOption(5)">5</a>
+                        <a href="javascript:void(0)" id="6" type="button" onclick="switchOption(6)">6</a>
+                        <a href="javascript:void(0)" id="7" type="button" onclick="switchOption(7)">7</a>
+                        <a href="javascript:void(0)" id="8" type="button" onclick="switchOption(8)">8</a>
+                        <a href="javascript:void(0)" id="9" type="button" onclick="switchOption(9)">9</a>
+                        <a href="javascript:void(0)" id="10" type="button" onclick="switchOption(10)">10</a>
+                    </div>
+                </div>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "yearsLabel" for="yearsInput" style="font-size: 40px; float: left;">How many years?:</label>
-                <input type="number" step="0.01" class="form-control" id="yearsInput" name="yearsInput"></input>
+        <div id="Values">
+            <div class="row">
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+                <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                    <label id = "value1Label" for="value1Input" style="font-size: 40px; float: left;">Value 1:</label>
+                    <input type="number" step="0.01" class="form-control" id="value1Input" name="value1Input"></input>
+                </div>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "oneLabel" for="oneInput" style="font-size: 40px; float: left;"> Year 1 :</label>
-                <input type="number" step="0.01" class="form-control" id="oneInput" name="oneInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "twoLabel" for="twoInput" style="font-size: 40px; float: left;"> Year 2 :</label>
-                <input type="number" step="0.01" class="form-control" id="twoInput" name="twoInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "threeLabel" for="threeInput" style="font-size: 40px; float: left;"> Year 3 :</label>
-                <input type="number" step="0.01" class="form-control" id="threeInput" name="threeInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "fourLabel" for="fourInput" style="font-size: 40px; float: left;"> Year 4 :</label>
-                <input type="number" step="0.01" class="form-control" id="fourInput" name="fourInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        
         <div class="row">
             <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
             <div class="col-12 col-xs-1 col-s-1 col-md-4 col-lg-4" style = "font-size:25px; font-weight: 750;">
@@ -94,7 +77,7 @@
     <script>let exports = {};</script>
     <script type = "text/javascript" src = Calculations.js></script>
     <script type = "text/javascript">
-        let option = 0;
+        let option = 1;
         let display = 0;
         
         function displayMenu(){
@@ -107,16 +90,35 @@
             }
 
         }
-        async function calculate(){
-            let Invest = document.getElementById("invesInput").value;
-            let years = document.getElementById("yearsInput").value;
-            let yearOne = document.getElementById("oneLabel").value;
-            
-            let yearTwo = document.getElementById("twoLabel").value;
-            let yearThree = document.getElementById("threeLabel").value;
-            let yearFour = document.getElementById("fourLabel").value;
 
-            document.getElementById('answer').innerHTML = exports.NPV(Invest, years, yearOne, yearTwo, yearThree, yearFour);
+        function displayGrowth(values){
+            let valueInputs = "";
+            for(let i = 1; i <= values; i++){
+                valueInputs += `<div class="row">
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+                <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                    <label id = "value${i}Label" for="value${i}Input" style="font-size: 40px; float: left;">Value ${i}:</label>
+                    <input type="number" step="0.01" class="form-control" id="value${i}Input" name="value${i}Input"></input>
+                </div>
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            </div>`;
+            }
+            document.getElementById('Values').innerHTML = valueInputs;
+        }
+        function switchOption(input){
+            document.getElementById('valueSelect').innerHTML = input + " ▽";
+            document.getElementById(input.toString()).style.display = "none";
+            document.getElementById(option.toString()).style.display = "block";
+            option = input;
+            displayMenu();
+            displayGrowth(input)
+        }
+        async function calculate(){
+            let args = [];
+            for(let i = 1; i <= option; i++){
+                args.push(parseFloat(document.getElementById(`value${i}Input`).value));
+            }
+            document.getElementById('answer').innerHTML = exports.IRR(args);
             document.getElementById('answer').style.color = "#ffffff";
 
             let response = await fetch('http://localhost:4000/loggedUser');
