--- a/View/YTM.html
+++ b/View/YTM.html
@@ -16,7 +16,7 @@
         <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
         <div class="col-12 col-xs-0 cold-md-8 col-lg-4">
             <h1 id = "header1" name = "header1" style = "font-size:60px; font-weight: 750; margin-top: 40px; margin-bottom: 40px; border-style:solid; border-width:10px; border-color:#a349a4;">
-                <u>Yeild of Maturity:</u>
+                <u>Yield to Maturity:</u>
             </h1>
         </div>
         <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "priceLabel" for="priceInput" style="font-size: 40px; float: left;">Current Bond Price:</label>
+                <label id = "priceLabel" for="priceInput" style="font-size: 40px; float: left;">Price Paid for Bond:</label>
                 <input type="number" step="0.01" class="form-control" id="priceInput" name="priceInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
@@ -33,42 +33,26 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "faceLabel" for="faceInput" style="font-size: 40px; float: left;">Bond Face Value/Par Value:</label>
+                <label id = "coupAmtLabel" for="coupAmtInput" style="font-size: 40px; float: left;">Coupon Payment Amount:</label>
+                <input type="number" step="0.01" class="form-control" id="coupAmtInput" name="coupAmtInput"></input>
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                <label id = "coupPmtLabel" for="coupPmtInput" style="font-size: 40px; float: left;">Coupon Payments Made:</label>
+                <input type="number" step="0.01" class="form-control" id="coupPmtInput" name="coupPmtInput"></input>
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                <label id = "faceLabel" for="faceInput" style="font-size: 40px; float: left;">Face Value:</label>
                 <input type="number" step="0.01" class="form-control" id="faceInput" name="faceInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "maturityLabel" for="maturityInput" style="font-size: 40px; float: left;">Years to Maturity :</label>
-                <input type="number" step="0.01" class="form-control" id="maturityInput" name="maturityInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "coupLabel" for="coupInput" style="font-size: 40px; float: left;">Annual Coupon Rate (%)</label>
-                <input type="number" step="0.01" class="form-control" id="coupInput" name="coupInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "pmtMadeLabel" for="pmtMade" style="font-size: 40px; float: left;">Options:</label>
-                <select id="select1">
-                    <option value=0>Annually</option>
-                    <option value=1>Semiannually</option>
-                    <option value=2>Quarterly</option>
-                    <option value=3>Monthly</option>
-                </select>
-                
-                <button onclick="getOption()"> Confirm </button>
-                
-            </div>
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
         </div>
         <div class="row">
             <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
@@ -113,11 +97,18 @@
         }
         async function calculate(){
             let priceInput = document.getElementById("priceInput").value;
+            let coupAmtInput = document.getElementById("coupAmtInput").value;
+            let coupPmtInput = document.getElementById("coupPmtInput").value;
             let faceInput = document.getElementById("faceInput").value;
-            let maturityInput = document.getElementById("maturityInput").value;
-            let coupInput = document.getElementById("coupInput").value;
+            let args = [-1*priceInput];
+            let i;
+            for(i = 0; i < coupPmtInput; i++){
+                args.push(parseFloat(coupAmtInput));
+            }
+            args[i] += parseFloat(faceInput);
+            //console.log(args);
 
-            document.getElementById('answer').innerHTML = exports.YTM(priceInput, faceInput, maturityInput, coupInput, option);
+            document.getElementById('answer').innerHTML = exports.IRR(args);
             document.getElementById('answer').style.color = "#ffffff";
 
              let response = await fetch('http://localhost:4000/loggedUser');
