--- a/View/EAA.html
+++ b/View/EAA.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "perLabel" for="perInput" style="font-size: 40px; float: left;">Number of Period:</label>
+                <label id = "perLabel" for="perInput" style="font-size: 40px; float: left;">Number of Periods:</label>
                 <input type="number" step="0.01" class="form-control" id="perInput" name="perInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
