--- a/View/CAPM.html
+++ b/View/CAPM.html
@@ -27,7 +27,7 @@
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
                 <label id = "expLabel" for="expInput" style="font-size: 40px; float: left;">Expected Market Return E(Rm):</label>
-                <input type="number" step="0.01" class="form-control" id="expInput" name="expInput"></input>
+                <input type="number" step="0.0000000001" class="form-control" id="expInput" name="expInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
@@ -35,7 +35,7 @@
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
                 <label id = "rateLabel" for="rateInput" style="font-size: 40px; float: left;">Risk Free Rate Rf:</label>
-                <input type="number" step="0.01" class="form-control" id="rateInput" name="rateInput"></input>
+                <input type="number" step="0.0000000001" class="form-control" id="rateInput" name="rateInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
                 <label id = "stockLabel" for="stockInput" style="font-size: 40px; float: left;">Beta for Stock βi:</label>
-                <input type="number" step="0.01" class="form-control" id="stockInput" name="stockInput"></input>
+                <input type="number" step="0.0000000001" class="form-control" id="stockInput" name="stockInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             }
 
         }
-        function calculate(){
+        async function calculate(){
             let expInput = document.getElementById("expInput").value;
             let rateInput = document.getElementById("rateInput").value;
             
@@ -93,7 +93,7 @@
 
             document.getElementById('answer').innerHTML = exports.CAPM(expInput, rateInput, stockInput);
             document.getElementById('answer').style.color = "#ffffff";
-        }
+        
          let response = await fetch('http://localhost:4000/loggedUser');
 
             let data = ["15",exports.CAPM(expInput, rateInput, stockInput)]
@@ -140,6 +140,7 @@
                 console.log("Failed");
 
             }
+        }
     </script>
     </body>
 </html>
