--- a/View/NPER.html
+++ b/View/NPER.html
@@ -130,7 +130,7 @@
 
               let response = await fetch('http://localhost:4000/loggedUser');
 
-            let data = ["3",exports.PMT(rate, nper, pv, fv, option)]
+            let data = ["3",exports. exports.NPER(rate, pmt, pv, fv, option)]
 
             try{
                  users = await response.json();
