--- a/View/history.html
+++ b/View/history.html
@@ -53,8 +53,8 @@
     async function his(){
 
         
-        const pages = ["PV","FV","PMT","NPER","NPV","Annual Growth of Divends", "Annual Growth of Stock", "Expected Dividends","Present Stock Price", "Future Stock Price", "Price of a Bond", "Yeild to Maturity", "Anuual Annuity",
-         "Internal Rate of Return", "Average cost of capital","Capital Asset Pricing","Car Payments", "Amortization"];
+        const pages = ["PV","FV","PMT","NPER","NPV","Annual Growth of Divends", "Expected Dividends","Present Stock Price", "Price of a Bond", "Yield to Maturity", "Anuual Annuity",
+         "Internal Rate of Return", "Average cost of capital","Capital Asset Pricing","Loan payments"];
          
         let response = await fetch('http://localhost:4000/loggedUser');
         
