--- a/View/LoanPayments.html
+++ b/View/LoanPayments.html
@@ -101,7 +101,7 @@
             
             let response = await fetch('http://localhost:4000/loggedUser');
 
-            let data = ["8", exports.PSP(CurInput, rateInput, stockInput)]
+            let data = ["14",exports.carPayments(priceInput, downPMTInput, loanInput, rateInput)]
 
             try{
                  users = await response.json();
