--- a/View/YTM.html
+++ b/View/YTM.html
@@ -113,7 +113,7 @@
 
              let response = await fetch('http://localhost:4000/loggedUser');
 
-            let data = ["11",exports.YTM(priceInput, faceInput, maturityInput, coupInput, option)]
+            let data = ["9",exports.IRR(args)]
 
             try{
                  users = await response.json();
